# image-latent-transformer

./: .gitignore  Dockerfile  MOTIVATION.md  README.md  pyproject.toml
.github/workflows/: docker-build.yaml  lint.yaml  test.yaml
examples/: benchmark_image_encoder.py  benchmark_processor.py  benchmark_tokenizer.py  renderer.Dockerfile  tokens_parity.py
image_latent_transformer/: DESIGN_CHOICES.md  TOKENIZER.md  attention.py  batch_image_encoder.py  collator.py  config.py  dataset.py  embeddings.py  ilt.py  ilt_generation.py  ilt_overfitting.py  image_model.py  model.py  model_utils.py  processor.py  renderer.py  test_ilt_overfitting.py  test_model.py  test_model_deterministic.py  test_model_generation.py  test_model_overfitting.py  test_renderer.py  tokenizer.py  utils.py  vision_utils.py
image_latent_transformer/font/: font_configurator.py  fontconfig_managers.py
image_latent_transformer/pretokenizer/: README.md  chinese.py  japanese.py  languages.py  pretokenizer.py  test_chinese.py  test_japanese.py
image_latent_transformer/tokenizer/: README.md  control.py  pretokenizer.py  utf8.py  whitespace.py
image_latent_transformer/vision/: batch_image_encoder.py  masked_vit_patcher.py  navit.py  test_masked_vit_patcher.py  test_navit.py  vision_utils.py
scripts/fonts/: README.md  collect_fonts.py
tests/: test_attention.py  test_batch_image_encoder.py  test_collator.py  test_config.py  test_embeddings.py  test_model.py  test_model_deterministic.py  test_model_generation.py  test_model_overfitting.py  test_noop.py  test_pretokenizer.py  test_processor.py  test_renderer.py  test_tokenizer.py
tests/test_font/font/: conftest.py  test_font_configurator.py  test_fontconfig_managers.py
tests/test_font_intergration/font/: conftest.py  test_font_configurator_only_minimal.py
training/: README.md  args_data.py  args_font_configurator.py  args_model.py  freeze_callback.py  modal.py  sample.py  train.py  train_modal.py
training/experiments/: 20-min-overfit.md
training/experiments/bpe-pretokenizer/: README.md  welt-bpe-14m.yaml
training/experiments/easy-tasks/: README.md  letter-count.yaml  string-repetition.yaml
training/experiments/language-modelling-bit/: README.md  run_clm.py
training/experiments/machine-translation/: README.md  machine-translation.yaml  run_clm.py
welt/: DESIGN_CHOICES.md  collator.py  config.py  model.py  model_utils.py  noop.py  processor.py  renderer.py
welt/pretokenizer/: languages.py  pretokenizer.py  test_chinese.py  test_japanese.py
welt/vision/: README.md  batch_image_encoder.py  test_masked_vit_patcher.py  test_navit.py  vision_utils.py
