[project]
name = "image-latent-transformer"
description = "Decode text (bytes) from an image"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amit@sign.mt" },
]
readme = "README.md"
dependencies = [
    "transformers[torch]",
    "datasets",
    "Pillow", # For AutoImageProcessor
    "torchvision", # For use_fast=True
    "signwriting @ git+https://github.com/sign-language-processing/signwriting", # To render SignWriting images
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-xdist", # For parallel test execution
]

train = [
    "modal", # Used to run training jobs
    "hf_transfer", # For HF_HUB_ENABLE_HF_TRANSFER
    "accelerate", # For distributed training
    "datasets", # For dataset loading and processing
    "evaluate", # For evaluation metrics
    "scikit-learn", # For "accuracy" metric in evaluate
    "wandb", # For experiment tracking
]

[tool.setuptools]
packages = [
    "image_latent_transformer",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
    "TRY", # tryceratops
]

[tool.ruff.lint.per-file-ignores]
"examples/tokens_parity.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["image_latent_transformer", "tests"]
