[project]
name = "WeLT"
description = "WeLT: Word embedding Latent Transformer - a language model designed to operate on \"words\"."
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amit@sign.mt" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers[torch]",
    "torch",
    "trl", # For huggingface implementation of pack_dataset
    "datasets",
    "Pillow", # For AutoImageProcessor
    "torchvision", # For use_fast=True
    "signwriting @ git+https://github.com/sign-language-processing/signwriting", # To render SignWriting images
    "cachetools", # For LRU cache in processor
    "vit-pytorch", # For NaViT model implementation
    "words-segmentation", # For pre-tokenization into words
    "utf8-tokenizer", # For tokenization of bytes
    "lxml", # for XML parsing in fontconfig TODO remove once https://github.com/sign/WeLT/issues/24
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-xdist", # For parallel test execution
]

train = [
    "modal", # Used to run training jobs
    "hf_transfer", # For HF_HUB_ENABLE_HF_TRANSFER
    "accelerate", # For distributed training
    "datasets", # For dataset loading and processing
    "evaluate", # For evaluation metrics
    "scikit-learn", # For "accuracy" metric in evaluate
    "wandb", # For experiment tracking
]

[tool.setuptools]
packages = [
    "welt",
    "welt.vision",
    "font_configurator", # TODO: extract to separate package https://github.com/sign/WeLT/issues/24
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "training/experiments/*",
    "welt/vision/masked_vit_patcher.py", # Hacky patching file
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
    "TRY", # tryceratops
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "welt",
    "tests",
    "font_configurator",
]
